--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
                     </div>
                     <!-- column -->
                     <div class="col-lg-4">
-                        <div class="card">
+                     <div class="card">
                             <h4 class="card-title ld-title-indent">Drop Queue</h4>
-                            <div class="comment-widgets scrollable">
+                            <div class="drop-queue-styled">
                                 <div class="dropQueueList" id="dropQueueList"></div>
                                 <!-- Comment Row -->
                                 <!--<div class="d-flex flex-row comment-row m-t-0">-->
