Added buttons DQ DL

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="./css/style.min.css" rel="stylesheet" />
     <link href="./css/custom.css" rel="stylesheet" />
     <link href="./chosen/dist/css/chosen.min.css" rel="stylesheet" />
+    <link href="./css/icons/font-awesome/css/fontawesome-all.min.css" rel="stylesheet"
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -508,6 +509,47 @@
         <!-- Container fluid  -->
         <!-- ============================================================== -->
         <div class="container-fluid">
+          <button
+            class="btn btn-success mb-2"
+            data-toggle="collapse"
+            data-target="#dropqueuecollapse"
+          >
+            Drop Queue
+            <i class="fa fa-arrow-circle-down pl-1" aria-hidden="true"></i>
+          </button>
+          <button
+            class="btn btn-success mb-2"
+            data-toggle="collapse"
+            data-target="#TradeListCollapseBtn"
+          >
+            Trade list
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+          </button>
+          <div class="col-lg-3">
+            <div class="card">
+              <div class="collapse" id="TradeListCollapseBtn">
+                <div class="card drop-queue">
+                  <button class="btn btn-success">Upload to ImgUR<i class="far fa-images pl-2"></i></button>
+                  <h4 class="card-title ld-title-indent">Trade List</h4>
+                  <div class="dropQueueList" id="TradeList"></div>
+                  <!-- Comment Row -->
+                  <!--<div class="d-flex flex-row comment-row m-t-0">-->
+                  <!--    <div class="p-2">-->
+                  <!--        <img src="./public/limedrop-client/assets/images/users/1.png" alt="user" width="70" class="rounded-circle">-->
+                  <!--    </div>-->
+                  <!--    <div class="comment-text w-100">-->
+                  <!--        <h6 class="font-medium">Aldur's Stony Gaze</h6>-->
+                  <!--        <div class="comment-footer">-->
+                  <!--            <span class="text-muted float-right">29838203</span>-->
+                  <!--            <button type="button" class="btn btn-cyan btn-sm">Helm</button>-->
+                  <!--            <button type="button" class="btn btn-success btn-sm">Armor</button>-->
+                  <!--        </div>-->
+                  <!--    </div>-->
+                  <!--</div>-->
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="row">
             <!-- column -->
             <div class="col-xs-12 col-lg-8">
@@ -534,15 +576,8 @@
             </div>
             <!-- column -->
             <div class="col-lg-4">
-              <button
-                class="btn btn-default"
-                data-toggle="collapse"
-                data-target="#dropqueuecollapse"
-              >
-                Drop Queue
-              </button>
               <div class="card">
-                <div class="collapse" id="#dropqueuecollapse">
+                <div class="collapse" id="dropqueuecollapse">
                   <div class="card drop-queue">
                     <h4 class="card-title ld-title-indent">Drop Queue</h4>
                     <div class="dropQueueList" id="dropQueueList"></div>
@@ -564,6 +599,7 @@
                 </div>
               </div>
             </div>
+            <!-- column -->
           </div>
           <!-- ============================================================== -->
           <!-- Recent comment and chats -->
