--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             data-toggle="collapse"
             data-target="#dropqueuecollapse"
           >
-            Drop Queue
+            Queue
             <i class="fa fa-arrow-circle-down pl-1" aria-hidden="true"></i>
           </button>
           <!-- <button
@@ -567,8 +567,9 @@
             </div>
             <!-- column -->
             <div class="col-lg-4">
-              <div class="card">
-                <div class="collapse" id="dropqueuecollapse">
+              <div class="collapse" id="dropqueuecollapse">
+                <button class="ml-1 mb-1 btn btn-success">Trade List <i class="ml-1 far fa-images"></i></button>
+                <div class="card">
                   <div class="card drop-queue">
                     <h4 class="card-title ld-title-indent">Drop Queue</h4>
                     <div class="dropQueueList p-2" id="dropQueueList"></div>
