Major Styling changes to: Searchbox, Search menu

--- a/index.html
+++ b/index.html
@@ -161,19 +161,20 @@
                   onSubmit="javascript: return false;"
                 >
                   <input
-                    class="form-control col-lg-9"
+                    class="form-control col-xl-9 col-lg-7 col-md-6 col-sm-5"
                     type="text"
                     placeholder="Search &amp; enter"
                     id="search-bar"
                   />
-                  <div class="form-control col-lg-3">
-                    <div class="grp-btn" title="Filter search results">
-                      <a><i class="ti-filter"></i></a>
+                  <div class=" col-lg-8 col-md-7 col-sm-6 grp-btn" title="Filter search results">
+                    <a><i class="ti-filter"></i></a>
+                  </div>
+                  <div class="styled-search-menu">
+                    <div class="search-group" id="search-group">
                     </div>
                     <a class="srh-btn">
                       <i class="ti-close"></i>
                     </a>
-                    <div class="search-group" id="search-group"></div>
                   </div>
                 </form>
               </li>
