working on imgur upload

--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
             </button>
           </div>
           <div class="modal-body">
-            	<div id="itemScreenshot">
+            	<div style="text-align="center" id="itemScreenshot">
 		</div>
           </div>
           <div class="modal-footer">
@@ -818,7 +818,11 @@
     <script src="./js/CryptoJS/md5.js"></script>
     <script src="./js/base64.js"></script>
     <script src="./chosen/dist/js/chosen.jquery.min.js"></script>
+	<script src='./js/packer.growing.js'></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+	<script src="./js/font16.js"></script>
     <script src="./js/item.js"></script>
+	<script src="./js/itemScreenshot.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script data-main="js/index" src="./js/require.js"></script>
   </body>
