changed header bar to fixed and fixed queue buttonwrap

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
               <div class="card">
                 <div class="card drop-queue">
                   <h4 class="card-title ld-title-indent">Queue</h4>
-                  <div style="display:inline-flex">
+                  <div style="display: flex;flex-direction: row;flex-wrap: wrap;">
                     <button class="btn btn-success" id="imgur-upload-btn">Upload To Imgur<i class="ml-1 far fa-images"></i>
                     </button>
                     <button class="btn btn-success" id="imgur-upload-btn">Save For Later<i class="ml-1 far fa-arrow-alt-circle-up"></i>
@@ -596,7 +596,7 @@
         <!-- ============================================================== -->
         <!-- footer -->
         <!-- ============================================================== -->
-        <footer class="footer text-center"></footer>
+        <footer class="footer text-right"></footer>
         <!-- ============================================================== -->
         <!-- End footer -->
         <!-- ============================================================== -->
@@ -834,6 +834,7 @@
 	<script src="./js/font16.js"></script>
     <script src="./js/item.js"></script>
 	<script src="./js/itemScreenshot.js"></script>
+    <script src="./js/testItems.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script data-main="js/index" src="./js/require.js"></script>
   </body>
