added dummy data changed some styling

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </a>
                 <form
                   class="app-search position-fixed"
-                  style="display: flex; top: 0px; border: solid;"
+                  style="display: flex; top: 0px; border: 2px solid;"
                   onSubmit="javascript: return false;"
                 >
                   <div class="col-auto" style="display:contents;">
@@ -168,7 +168,7 @@
                         id="search-bar"
                       />
                     <div class="grp-btn" title="Filter search results">
-                        <a><i class="ti-filter"></i></a>
+                        <a class="waves-effect waves-dark"><i class="ti-filter"></i></a>
                     </div>
                   </div>
                   
@@ -179,7 +179,7 @@
                     </div>
                     
                   </div>
-                  <a class="srh-btn">
+                  <a class="srh-btn waves-effect waves-dark">
                       <i class="ti-close"></i>
                   </a>
                 </form>
