--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <link
       href="./css/icons/font-awesome/css/fontawesome-all.min.css"
       rel="stylesheet"
-      <!--
+    />
+    <!--
       HTML5
       Shim
       and
@@ -600,6 +601,12 @@
           <!-- ============================================================== -->
           <!-- Recent comment and chats -->
           <!-- ============================================================== -->
+          <div class="custom-footer">
+            <a target="_blank" href="https://github.com/Fa-b/limedrop">
+              <i class="fab fa-github fa-2x"></i>
+            </a>
+            <h6>Share me!</h6>
+          </div>
         </div>
         <!-- ============================================================== -->
         <!-- End Container fluid  -->
@@ -607,6 +614,7 @@
         <!-- ============================================================== -->
         <!-- footer -->
         <!-- ============================================================== -->
+
         <footer class="footer text-right"></footer>
         <!-- ============================================================== -->
         <!-- End footer -->
