Added git icon/link and cleaned code

--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
           <div class="custom-footer">
             <a target="_blank" href="https://github.com/Fa-b/limedrop">
               <i class="fab fa-github fa-2x"></i>
+              <h6 id="show">Share me!</h6>
             </a>
-            <h6>Share me!</h6>
           </div>
         </div>
         <!-- ============================================================== -->
