Testing trade list Layout/GUI

--- a/index.html
+++ b/index.html
@@ -799,6 +799,15 @@
           </div>
           <div class="modal-body">
             <div style="text-align: center;" id="itemScreenshot"></div>
+            <div class="rev-list-item">
+              <h6>Title</h6>
+              <span>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Eveniet dicta dolorem sequi iusto ab repellendus aliquam, sunt,
+                eum exercitationem harum reprehenderit commodi quidem, delectus
+                nisi quasi officia ratione quae quo?
+              </span>
+            </div>
           </div>
           <div class="modal-footer"></div>
         </div>
