--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <div class="card">
               <div class="card drop-queue">
                 <h4 class="card-title ld-title-indent">Queue</h4>
-                <div style="display: flex; flex-direction: row; flex-wrap: wrap;">
+                <div style="display: flex; flex-direction: row; flex-wrap: wrap; min-height: 40px;">
                   <button class="btn btn-success" id="imgur-upload-btn">
                     Upload To Imgur<i class="ml-1 far fa-images"></i>
                   </button>
