only scroll queue on append add pointer cursor for queue item hover remove item header on group items

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                     Restore From Cookie<i class="ml-1 far fa-arrow-alt-circle-down"></i>
                   </button>
                 </div>
-                <div class="dropQueueList p-2" id="dropQueueList"></div>
+                <div class="dropQueueList comment-widgets scrollable" id="dropQueueList"></div>
                 <!-- Comment Row -->
                 <!--<div class="d-flex flex-row comment-row m-t-0">-->
                 <!--    <div class="p-2">-->
