--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
 	  aria-labelledby="template-imgurUpload"
 	  aria-hidden="true"
 	>
-	  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+	  <div class="modal-dialog modal-dialog-centered modal-lg" role="document" id="imgurContainer">
 		<div class="modal-content">
 		  <div class="modal-header">
 			<h5 class="modal-title" id="template-upload">Upload to Imgur</h5>
@@ -805,10 +805,16 @@
 			  <span aria-hidden="true">&times;</span>
 			</button>
 		  </div>
-		  <div class="modal-body">
+		  <div class="modal-body" style="padding:0px">
 			<div style="text-align: center;" id="itemScreenshot"></div>
 		  </div>
-		  <div class="modal-footer"></div>
+		  <div class="modal-footer">
+			<div class="start-upload-btn" title="Upload image to Imgur">
+			  <a class="waves-effect waves-dark"
+				><i class="ti-upload"></i
+			  ></a>
+			</div>
+		  </div>
 		</div>
 	  </div>
 	</div>
@@ -854,6 +860,7 @@
 	<script src="./js/base64.js"></script>
 	<script src="./chosen/dist/js/chosen.jquery.min.js"></script>
 	<script src="./js/packer.growing.js"></script>
+	<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 	<script src="./js/font16.js"></script>
 	<script src="./js/item.js"></script>
