New navbar icons and modal Styling.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				  class="nav-link waves-effect waves-dark"
 				  href="javascript:void(0)"
 				>
-				  <i class="ti-search"></i>
+				  <i class="fas fa-search"></i>
 				</a>
 				<form
 				  class="app-search position-fixed"
@@ -183,7 +183,7 @@
 					</div>
 				  </div>
 				  <a class="srh-btn waves-effect waves-dark">
-					<i class="ti-close"></i>
+					<i class="navbar-icons far fa-times-circle"></i>
 				  </a>
 				</form>
 			  </li>
@@ -203,7 +203,7 @@
 				  aria-haspopup="true"
 				  aria-expanded="false"
 				>
-				  <i class="font-24 mdi mdi-comment-processing"></i>
+				  <i class="navbar-icons far fa-bell"></i>
 				</a>
 				<div
 				  class="dropdown-menu dropdown-menu-right mailbox animated bounceInDown p-b-0"
@@ -230,7 +230,7 @@
 				  aria-haspopup="true"
 				  aria-expanded="false"
 				>
-				  <i class="font-24 mdi mdi-account-circle"></i>
+				<i class="navbar-icons fas fa-user"></i>
 				</a>
 				<div
 				  class="dropdown-menu dropdown-menu-right user-dd animated p-b-0"
@@ -660,7 +660,7 @@
 			  data-dismiss="modal"
 			  aria-label="Close"
 			>
-			  <span aria-hidden="true">&times;</span>
+			<i class="far fa-times-circle fa-2x"></i>
 			</button>
 		  </div>
 		  <div class="modal-body">
@@ -763,7 +763,7 @@
 			  data-dismiss="modal"
 			  aria-label="Close"
 			>
-			  <span aria-hidden="true">&times;</span>
+			<i class="far fa-times-circle fa-2x"></i>
 			</button>
 		  </div>
 		  <div class="modal-body"></div>
@@ -802,7 +802,7 @@
 			  data-dismiss="modal"
 			  aria-label="Close"
 			>
-			  <span aria-hidden="true">&times;</span>
+				<i class="far fa-times-circle fa-2x"></i>
 			</button>
 		  </div>
 		  <div class="modal-body" style="padding:0px">
@@ -811,8 +811,7 @@
 		  <div class="modal-footer">
 			<div class="start-upload-btn" title="Upload image to Imgur">
 			  <a class="waves-effect waves-dark"
-				><i class="ti-upload"></i
-			  ></a>
+				><i class="fas fa-upload fa-2x" style="color: #19cc05;"></i></a>
 			</div>
 		  </div>
 		</div>
