fix - accidentally disabled Login button

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 					  />
 					</a>
 					<a
-					  class="disabled btn btn-dark dropdown-item waves-effect waves-dark"
+					  class="btn btn-dark dropdown-item waves-effect waves-dark"
 					  id="login-ok-btn"
 					  href="javascript:void(0)"
 					>
