some more styling (icon buttons)

--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 					  id="search-bar"
 					/>
 					<div class="grp-btn" title="Filter search results">
-					  <a class="waves-effect waves-dark"
-						><i class="ti-filter"></i
-					  ></a>
+					  <button type="button" class="btn icon">
+                        <i class="fa fa-filter"></i>
+                      </button>
 					</div>
 				  </div>
 
@@ -182,9 +182,9 @@
 					  <div class="search-group" id="search-group"></div>
 					</div>
 				  </div>
-				  <a class="srh-btn waves-effect waves-dark">
+				  <button class="srh-btn close" type="button" aria-label="close">
 					<i class="navbar-icons far fa-times-circle"></i>
-				  </a>
+				  </button>
 				</form>
 			  </li>
 			</ul>
@@ -780,11 +780,9 @@
 			<div style="text-align: center;" id="itemScreenshot"></div>
 		  </div>
 		  <div class="modal-footer">
-			<div class="start-upload-btn" title="Upload image to Imgur">
-			  <a class="waves-effect waves-dark"
-				><i class="fas fa-upload fa-2x" style="color: #19cc05;"></i></a>
-			</div>
-		  </div>
+            <button title="Upload Image to Imgur" type="button" class="icon" id="begin-upload-btn">
+                <i class="fas fa-upload fa-2x"></i>
+            </button>
 		</div>
 	  </div>
 	</div>
