Added new icons

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 				>
 				  <form class="logged-in-out">
 					<a class="dropdown-item input-group">
-					  <i class="ti-server m-r-5 m-l-5 ld-input-icon"></i>
+					  <i class="fas fa-database m-r-5 m-l-5 ld-input-icon"></i>
 					  <input
 						type="text"
 						class="form-control"
@@ -250,7 +250,7 @@
 					  />
 					</a>
 					<a class="dropdown-item input-group">
-					  <i class="ti-user m-r-5 m-l-5 ld-input-icon"></i>
+					  <i class="fas fa-user m-r-5 m-l-5 ld-input-icon"></i>
 					  <input
 						type="text"
 						class="form-control"
@@ -263,7 +263,7 @@
 					  />
 					</a>
 					<a class="dropdown-item input-group">
-					  <i class="ti-lock m-r-5 m-l-5 ld-input-icon"></i>
+					  <i class="fas fa-key m-r-5 m-l-5 ld-input-icon"></i>
 					  <input
 						type="password"
 						class="form-control"
@@ -280,7 +280,7 @@
 					  id="login-ok-btn"
 					  href="javascript:void(0)"
 					>
-					  <i class="fa fa-power-off m-r-5 m-l-5 ld-btn-icon"></i>
+					  <i class="fas fa-sign-in-alt m-r-5 m-l-5 ld-btn-icon"></i>
 					  Login
 					</a>
 				  </form>
@@ -290,7 +290,7 @@
 					  href="javascript:void(0)"
 					>
 					  <i
-						class="font-24 mdi mdi-account-circle current-user-btn"
+						class="font-24 mdi mdi-account current-user-btn"
 					  ></i>
 					  Public
 					</a>
@@ -298,22 +298,22 @@
 					  class="btn btn-dark dropdown-item add-acc-btn waves-effect waves-dark"
 					  href="javascript:void(0)"
 					>
-					  <i class="ti-view-list-alt m-r-5 m-l-5 ld-btn-icon"></i>
+					  <i class="fas fa-list-ul m-r-5 m-l-5 ld-btn-icon"></i>
 					  Add Accounts
 					</a>
 					<a class="disabled btn btn-dark dropdown-item waves-effect waves-dark" href="javascript:void(0)">
-					  <i class="ti-user m-r-5 m-l-5 ld-btn-icon"></i> View
+					  <i class="fas fa-user m-r-5 m-l-5 ld-btn-icon"></i> View
 					  Profiles
 					</a>
 					<a class="disabled btn btn-dark dropdown-item waves-effect waves-dark" href="javascript:void(0)">
-					  <i class="ti-settings m-r-5 m-l-5 ld-btn-icon"></i>
+					  <i class="fas fa-cog m-r-5 m-l-5 ld-btn-icon"></i>
 					  Settings
 					</a>
 					<a
 					  class="btn btn-dark dropdown-item logout-btn waves-effect waves-dark"
 					  href="javascript:void(0)"
 					>
-					  <i class="fa fa-power-off m-r-5 m-l-5 ld-btn-icon"></i>
+					  <i class="fas fa-sign-out-alt m-r-5 m-l-5 ld-btn-icon"></i>
 					  Logout
 					</a>
 				  </form>
