added mechanism to hide/overwrite specs on groupItem preview added lots ItemGroups to config (basically all possible runeword bases)

--- a/index.html
+++ b/index.html
@@ -790,7 +790,6 @@
 	<!-- ============================================================== -->
 	<!-- All Jquery -->
 	<!-- ============================================================== -->
-
 	<!--<script src="./public/limedrop-client/assets/libs/jquery/dist/jquery.min.js"></script>-->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<!-- Bootstrap tether Core JavaScript -->
@@ -828,6 +827,7 @@
 	<script src="./js/base64.js"></script>
 	<script src="./chosen/dist/js/chosen.jquery.min.js"></script>
 	<script src="./js/packer.growing.js"></script>
+    <script src="./js/MultiRegExp.js"></script>
 	<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 	<script src="./js/font16.js"></script>
