--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title"><i class="fas fa-cog fa-1x"></i></h5>
+					<h5 class="modal-title"><i class="pr-2 fas fa-cog fa-1x"></i>Settings</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<i class="fas fa-times fa-1x"></i>
 					</button>
